--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -10,14 +10,8 @@
   "routes": [
     {
       "pattern": "albert.sabatemartinez.com/*",
-      "zone_name": "sabatemartinez.com"
+      "zone_name": "sabatemartinez.com",
+      "custom_domain": true
     }
-  ],
-
-  // Environment configuration for preview deployments
-  "env": {
-    "preview": {
-      "name": "preview-albert-cv"
-    }
-  }
+  ]
 }
