--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.2",
-    "@cloudflare/workers-types": "4.20250724.0",
+    "@cloudflare/workers-types": "4.20250725.0",
     "@playwright/test": "^1.54.1",
     "@tailwindcss/vite": "4.1.11",
+    "@types/bun": "1.2.19",
     "@types/node": "24.1.0",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
@@ -40,5 +41,16 @@
     "vite": "7.0.6",
     "vite-tsconfig-paths": "5.1.4",
     "wrangler": "4.26.0"
-  }
+  },
+  "engines": {
+    "bun": ">=1.2.19"
+  },
+  "trustedDependencies": [
+    "@biomejs/biome",
+    "@parcel/watcher",
+    "@tailwindcss/oxide",
+    "esbuild",
+    "sharp",
+    "workerd"
+  ]
 }
